--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/ffajr/Desktop/Examen.Shity_Shooter/WebGL Builds;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/ffajr/Archivos/Unity/Web_build;C:/Users/ffajr/Archivos/Unity/build web;C:/Users/ffajr/Desktop/Examen.Shity_Shooter/WebGL Builds;;;;;;;\"}"
             }
         ]
     }
